created search property by uuid
