# app/src/test/resources/openapi-test.json
@@ -109,6 +109,16 @@
                 }
               }
             }
+          },
+          "404" : {
+            "description" : "Property not found",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/PropertyResponseDto"
+                }
+              }
+            }
           }
         }
       },
